[package]
name = "tempfile-istream"
version = "1.0.1"
edition = "2021"
description = "Implement IStream on an exclusive temp file which is deleted on release"
repository = "https://github.com/wravery/tempfile-istream"
license = "MIT"
categories = [ "os::windows-apis" ]

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]