[package]
name = "tempfile-istream"
version = "1.0.2"
edition = "2021"
description = "COM IStream on an exclusive temp file which is deleted on release"
repository = "https://github.com/wravery/tempfile-istream"
license = "MIT"
categories = [ "os::windows-apis" ]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [ "i686-pc-windows-msvc" ]

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
]
